--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
     "no-shadow": "off",
+    "no-tabs": 0,
     "arrow-parens": ["error", "as-needed"]
   },
   "ignorePatterns": [
