--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "antd": "^4.2.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "history": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-devicon": "^0.1.9",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-socks": "^2.1.0",
