--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
   },
