--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -37,7 +37,7 @@
   {
     "id": 7,
     "name": "Keen Foods",
-    "image": "images/keen-foods.png",
+    "image": "images/keen_foods.png",
     "liveLink": "https://keen-foods.herokuapp.com",
     "github": "https://github.com/OlukaDenis/meal-catalogue",
     "description": "A web app that provides detailed information on how to prepare you favorite recipes.",
@@ -106,6 +106,40 @@
       }
     ]
   },
+  {
+    "id": 101,
+    "name": "UgAid",
+    "image": "images/ugaid.png",
+    "liveLink": null,
+    "github": "https://github.com/OlukaDenis/UgAid",
+    "description": "Android mobile app that displays detailed information on movies and TV shows. App based on The Movie Database API.",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Java"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Room"
+      },
+      {
+        "id": 114,
+        "name": "Google Play"
+      }
+    ]
+  },
   
   {
     "id": 3,
@@ -138,7 +172,44 @@
     ]
   },
 
-
+  {
+    "id": 102,
+    "name": "Shuppa",
+    "image": "images/shuppa.png",
+    "liveLink": "https://play.google.com/store/apps/details?id=com.shuppa",
+    "github": null,
+    "description": "Android mobile app that offers a wider range of quality products in Uganda as most of the grocery shoppers prefer to get their home ground products available in the grocery Stores.",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Java"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Room"
+      },
+      {
+        "id": 114,
+        "name": "Google Play"
+      },
+      {
+        "id": 117,
+        "name": "Firestore"
+      }
+    ]
+  },
   {
     "id": 4,
     "name": "Todo App",
@@ -170,6 +241,79 @@
     ]
   },
 
+  {
+    "id": 102,
+    "name": "Teheca",
+    "image": "images/teheca.png",
+    "liveLink": "https://play.google.com/store/apps/details?id=com.tehecaapp",
+    "github": null,
+    "description": "Teheca app enables new parents to search, find and connect with health workers for in-home post-birth care services like reviews, checkups, and consultations.",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Java"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Room"
+      },
+      {
+        "id": 114,
+        "name": "Google Play"
+      }
+    ]
+  },
+
+  {
+    "id": 102,
+    "name": "Plateau Yorubs Statistical Survey",
+    "image": "images/plyss.png",
+    "liveLink": "https://play.google.com/store/apps/details?id=com.app.plyss",
+    "github": null,
+    "description": "Plateau Yoruba Statistical Survey app is designed to help analyze and and give insights of the total number of Yoruba people, household and their occupation in order to properly accessed them with grants, loan and even contracts when the need arises. ",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Java"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Room"
+      },
+      {
+        "id": 114,
+        "name": "Google Play"
+      },
+      {
+        "id": 117,
+        "name": "Firestore"
+      }
+    ]
+  },
   {
     "id": 5,
     "name": "Friendy",
