--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-typist": "^2.0.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
   },
@@ -28,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": "react-app"
