:sparkles: Added more project

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,6 +1,77 @@
 [
   {
     "id": 1,
+    "name": "iSeekMe - mentor-to-mentor",
+    "image": "images/iseekme.png",
+    "liveLink": "https://play.google.com/store/apps/details?id=com.iseekme.uat",
+    "github": "",
+    "description": "iSeekMe is a mentor-2-mentor platform where people from different life stages and backgrounds help each other with their personal and professional development.",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Kotlin"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Datastore"
+      },
+      {
+        "id": 114,
+        "name": "Coroutines"
+      }, {
+        "id": 116,
+        "name": "MVVM"
+      }
+    ]
+  },
+  {
+    "id": 102,
+    "name": "Teheca",
+    "image": "images/teheca.png",
+    "liveLink": "https://play.google.com/store/apps/details?id=com.tehecaapp",
+    "github": null,
+    "description": "Teheca app enables new parents to search, find and connect with health workers for in-home post-birth care services like reviews, checkups, and consultations.",
+    "tags": [
+      {
+        "id": 110,
+        "name": "Mobile"
+      },
+      {
+        "id": 111,
+        "name": "Android"
+      },
+      {
+        "id": 112,
+        "name": "Java"
+      },
+      {
+        "id": 113,
+        "name": "Retrofit"
+      },
+      {
+        "id": 115,
+        "name": "Room"
+      },
+      {
+        "id": 114,
+        "name": "Google Play"
+      }
+    ]
+  },
+  {
+    "id": 1,
     "name": "Muvi: The Muvi Guide",
     "image": "images/muvi.png",
     "liveLink": "https://play.google.com/store/apps/details?id=com.premar.muvi",
@@ -240,42 +311,6 @@
       }
     ]
   },
-
-  {
-    "id": 102,
-    "name": "Teheca",
-    "image": "images/teheca.png",
-    "liveLink": "https://play.google.com/store/apps/details?id=com.tehecaapp",
-    "github": null,
-    "description": "Teheca app enables new parents to search, find and connect with health workers for in-home post-birth care services like reviews, checkups, and consultations.",
-    "tags": [
-      {
-        "id": 110,
-        "name": "Mobile"
-      },
-      {
-        "id": 111,
-        "name": "Android"
-      },
-      {
-        "id": 112,
-        "name": "Java"
-      },
-      {
-        "id": 113,
-        "name": "Retrofit"
-      },
-      {
-        "id": 115,
-        "name": "Room"
-      },
-      {
-        "id": 114,
-        "name": "Google Play"
-      }
-    ]
-  },
-
   {
     "id": 103,
     "name": "Plateau Yorubs Statistical Survey",
