--- a/functions/package.json
+++ b/functions/package.json
@@ -7,19 +7,40 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "getConfig": "firebase functions:config:get > .runtimeconfig.json"
   },
+  "author": "Denis Oluka",
+  "email": "olukadeno@gmail.com",
   "engines": {
-    "node": "10"
+    "node": "14"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^8.13.0",
+    "algoliasearch": "^4.14.1",
+    "axios": "^0.24.0",
+    "base-64": "^1.0.0",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.4.0",
+    "firebase-admin": "^9.8.0",
+    "firestore-export-import": "^1.1.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "mpesa-api": "^3.0.2",
+    "swagger-ui-express": "^4.4.0",
+    "uuid4": "^2.0.2",
     "firebase-functions": "^3.22.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
